scf to pull data with api

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "1. COVID-19 World Survey Data API https://covidmap.umd.edu/api.html\n",
     "2. statsmodels https://www.statsmodels.org/stable/generated/statsmodels.tsa.stattools.grangercausalitytests.html\n",
-    "3. "
+    "3. 공공데이터포털 끌어오기 https://greendreamtrre.tistory.com/268"
    ]
   },
   {
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,20 +847,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. URL 파라미터 분리하기.\n",
     "# Service URL\n",
-    "xmlUrl = 'http://openapi.data.go.kr/openapi/service/rest/Covid19/getCovid19InfStateJson'\n",
+    "xmlUrl = 'http://openapi.data.go.kr/openapi/service/rest/Covid19/getCovid19SidoInfStateJson'\n",
     "My_API_Key = unquote('M3jBsz%2FCY6CB9tMYmAf9SQ8AMW6AtjQDjshDbBlpsTadmBOfyBTVoYSqAvMVX5HH2GNgM%2FzOHv150PFIyQbkig%3D%3D')    # 아래 내가 받은 인증키가 안 되서 수업용 인증키 사용.\n",
     "# My_API_Key = unquote('Agq7hySmyMi1FFU9kYibP%2BEnxYepQ%2FB6Dn%2Bw9lsYKVSCDjTwIdvpjmuhJrtyQrhipg3F3a4jbSq%2FLxHi%2FdUIoQ%3D%3D')    # 사용자 인증키\n",
     "queryParams = '?' + urlencode(    # get 방식으로 쿼리를 분리하기 위해 '?'를 넣은 것이다. 메타코드 아님.\n",
     "    {\n",
     "        quote_plus('ServiceKey') : My_API_Key,    # 필수 항목 1 : 서비스키 (본인의 서비스키)\n",
-    "        quote_plus('startCreateDt') : '20200310',          # 필수 항목 2 : 지역코드 (법정코드목록조회에서 확인)\n",
-    "        quote_plus('endCreateDt') : '20200315'         # 픽수 항목 3 : 계약월\n",
+    "        quote_plus('startCreateDt') : '20200101',          # 필수 항목 2 : 지역코드 (법정코드목록조회에서 확인)\n",
+    "        quote_plus('endCreateDt') :   '20201015'         # 픽수 항목 3 : 계약월\n",
     "     }\n",
     ")\n",
     "\n",
@@ -870,20 +870,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>createdt</th>\n",
+       "      <th>deathcnt</th>\n",
+       "      <th>defcnt</th>\n",
+       "      <th>gubun</th>\n",
+       "      <th>gubuncn</th>\n",
+       "      <th>gubunen</th>\n",
+       "      <th>incdec</th>\n",
+       "      <th>isolclearcnt</th>\n",
+       "      <th>isolingcnt</th>\n",
+       "      <th>localocccnt</th>\n",
+       "      <th>overflowcnt</th>\n",
+       "      <th>qurrate</th>\n",
+       "      <th>seq</th>\n",
+       "      <th>stdday</th>\n",
+       "      <th>updatedt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-10-14 09:38:25.148</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>검역</td>\n",
+       "      <td>隔離區</td>\n",
+       "      <td>Lazaretto</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1422</td>\n",
+       "      <td>199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-</td>\n",
+       "      <td>5023</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-10-14 09:38:25.148</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>제주</td>\n",
+       "      <td>济州</td>\n",
+       "      <td>Jeju</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>5022</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>297</td>\n",
+       "      <td>경남</td>\n",
+       "      <td>庆南</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>286</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.84</td>\n",
+       "      <td>5021</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1570</td>\n",
+       "      <td>경북</td>\n",
+       "      <td>庆北</td>\n",
+       "      <td>Gyeongsangbuk-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1490</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58.97</td>\n",
+       "      <td>5020</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>2</td>\n",
+       "      <td>176</td>\n",
+       "      <td>전남</td>\n",
+       "      <td>全南</td>\n",
+       "      <td>Jeollanam-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.44</td>\n",
+       "      <td>5019</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  createdt deathcnt defcnt gubun gubuncn           gubunen  \\\n",
+       "0  2020-10-14 09:38:25.148        0   1621    검역     隔離區         Lazaretto   \n",
+       "1  2020-10-14 09:38:25.148        0     59    제주      济州              Jeju   \n",
+       "2  2020-10-14 09:38:25.147        0    297    경남      庆南  Gyeongsangnam-do   \n",
+       "3  2020-10-14 09:38:25.147       56   1570    경북      庆北  Gyeongsangbuk-do   \n",
+       "4  2020-10-14 09:38:25.147        2    176    전남      全南      Jeollanam-do   \n",
+       "\n",
+       "  incdec isolclearcnt isolingcnt localocccnt overflowcnt qurrate   seq  \\\n",
+       "0     14         1422        199           0          14       -  5023   \n",
+       "1      0           59          0           0           0    8.80  5022   \n",
+       "2      0          286         11           0           0    8.84  5021   \n",
+       "3      0         1490         24           0           0   58.97  5020   \n",
+       "4      0          166          8           0           0    9.44  5019   \n",
+       "\n",
+       "              stdday updatedt  \n",
+       "0  2020년 10월 14일 00시     null  \n",
+       "1  2020년 10월 14일 00시     null  \n",
+       "2  2020년 10월 14일 00시     null  \n",
+       "3  2020년 10월 14일 00시     null  \n",
+       "4  2020년 10월 14일 00시     null  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rows = xmlobj.findAll('item')\n",
-    "rows[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "rowList = []\n",
     "nameList = []\n",
     "columnList = []\n",
@@ -909,48 +1061,301 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>createdt</th>\n",
+       "      <th>deathcnt</th>\n",
+       "      <th>defcnt</th>\n",
+       "      <th>gubun</th>\n",
+       "      <th>gubuncn</th>\n",
+       "      <th>gubunen</th>\n",
+       "      <th>incdec</th>\n",
+       "      <th>isolclearcnt</th>\n",
+       "      <th>isolingcnt</th>\n",
+       "      <th>localocccnt</th>\n",
+       "      <th>overflowcnt</th>\n",
+       "      <th>qurrate</th>\n",
+       "      <th>seq</th>\n",
+       "      <th>stdday</th>\n",
+       "      <th>updatedt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-10-14 09:38:25.148</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1621</td>\n",
+       "      <td>검역</td>\n",
+       "      <td>隔離區</td>\n",
+       "      <td>Lazaretto</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1422</td>\n",
+       "      <td>199</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>-</td>\n",
+       "      <td>5023</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-10-14 09:38:25.148</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>제주</td>\n",
+       "      <td>济州</td>\n",
+       "      <td>Jeju</td>\n",
+       "      <td>0</td>\n",
+       "      <td>59</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.80</td>\n",
+       "      <td>5022</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>297</td>\n",
+       "      <td>경남</td>\n",
+       "      <td>庆南</td>\n",
+       "      <td>Gyeongsangnam-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>286</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.84</td>\n",
+       "      <td>5021</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>56</td>\n",
+       "      <td>1570</td>\n",
+       "      <td>경북</td>\n",
+       "      <td>庆北</td>\n",
+       "      <td>Gyeongsangbuk-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1490</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>58.97</td>\n",
+       "      <td>5020</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-10-14 09:38:25.147</td>\n",
+       "      <td>2</td>\n",
+       "      <td>176</td>\n",
+       "      <td>전남</td>\n",
+       "      <td>全南</td>\n",
+       "      <td>Jeollanam-do</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9.44</td>\n",
+       "      <td>5019</td>\n",
+       "      <td>2020년 10월 14일 00시</td>\n",
+       "      <td>null</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4372</th>\n",
+       "      <td>2020-03-02 19:27:57.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>인천</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020년 3월 1일 16시</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4373</th>\n",
+       "      <td>2020-03-02 19:27:57.57</td>\n",
+       "      <td>9</td>\n",
+       "      <td>대구</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>469</td>\n",
+       "      <td></td>\n",
+       "      <td>4</td>\n",
+       "      <td>2020년 3월 1일 16시</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4374</th>\n",
+       "      <td>2020-03-02 19:27:57.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>부산</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td>2020년 3월 1일 16시</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4375</th>\n",
+       "      <td>2020-03-02 19:27:57.57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>서울</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>10</td>\n",
+       "      <td></td>\n",
+       "      <td>2</td>\n",
+       "      <td>2020년 3월 1일 16시</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4376</th>\n",
+       "      <td>2020-03-02 19:27:57.57</td>\n",
+       "      <td>18</td>\n",
+       "      <td>합계</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>586</td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020년 3월 1일 16시</td>\n",
+       "      <td></td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4377 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     createdt deathcnt defcnt gubun gubuncn           gubunen  \\\n",
+       "0     2020-10-14 09:38:25.148        0   1621    검역     隔離區         Lazaretto   \n",
+       "1     2020-10-14 09:38:25.148        0     59    제주      济州              Jeju   \n",
+       "2     2020-10-14 09:38:25.147        0    297    경남      庆南  Gyeongsangnam-do   \n",
+       "3     2020-10-14 09:38:25.147       56   1570    경북      庆北  Gyeongsangbuk-do   \n",
+       "4     2020-10-14 09:38:25.147        2    176    전남      全南      Jeollanam-do   \n",
+       "...                       ...      ...    ...   ...     ...               ...   \n",
+       "4372   2020-03-02 19:27:57.57        0     인천                               0   \n",
+       "4373   2020-03-02 19:27:57.57        9     대구                             469   \n",
+       "4374   2020-03-02 19:27:57.57        0     부산                               3   \n",
+       "4375   2020-03-02 19:27:57.57        0     서울                              10   \n",
+       "4376   2020-03-02 19:27:57.57       18     합계                             586   \n",
+       "\n",
+       "     incdec isolclearcnt       isolingcnt localocccnt overflowcnt qurrate  \\\n",
+       "0        14         1422              199           0          14       -   \n",
+       "1         0           59                0           0           0    8.80   \n",
+       "2         0          286               11           0           0    8.84   \n",
+       "3         0         1490               24           0           0   58.97   \n",
+       "4         0          166                8           0           0    9.44   \n",
+       "...     ...          ...              ...         ...         ...     ...   \n",
+       "4372                   5  2020년 3월 1일 16시                    None    None   \n",
+       "4373                   4  2020년 3월 1일 16시                    None    None   \n",
+       "4374                   3  2020년 3월 1일 16시                    None    None   \n",
+       "4375                   2  2020년 3월 1일 16시                    None    None   \n",
+       "4376                   1  2020년 3월 1일 16시                    None    None   \n",
+       "\n",
+       "       seq             stdday updatedt  \n",
+       "0     5023  2020년 10월 14일 00시     null  \n",
+       "1     5022  2020년 10월 14일 00시     null  \n",
+       "2     5021  2020년 10월 14일 00시     null  \n",
+       "3     5020  2020년 10월 14일 00시     null  \n",
+       "4     5019  2020년 10월 14일 00시     null  \n",
+       "...    ...                ...      ...  \n",
+       "4372  None               None     None  \n",
+       "4373  None               None     None  \n",
+       "4374  None               None     None  \n",
+       "4375  None               None     None  \n",
+       "4376  None               None     None  \n",
+       "\n",
+       "[4377 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "tdf[-100:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tdf"
+    "result"
    ]
   },
   {
